// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Alert props block=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props block=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-block uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props checkGrammar=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      checkGrammar={false}
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props checkGrammar=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      checkGrammar={true}
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props checkHighlight=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      checkHighlight={false}
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props checkHighlight=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      checkHighlight={true}
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props checkSpaces=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      checkSpaces={false}
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props checkSpaces=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      checkSpaces={true}
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props className="my-classname" 1`] = `
<div
  className="uu5-bricks-alert my-classname uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props closeDisabled=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props closeDisabled=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header uu5-bricks-alert-without-close"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props closeTimer=1500 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props closeTimer=3000 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props content=12345 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    12345
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props controlled=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props controlled=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props default props 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props disabled=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props disabled=true 1`] = `
<div
  className="uu5-bricks-alert uu5-common-disabled uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Alert props dynamic=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props dynamic=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props hidden=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props hidden=true 1`] = `
<div
  className="uu5-bricks-alert uu5-common-hidden uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props id="myId" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="myId"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props name="myName" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  name="myName"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Alert props nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Alert props nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Alert props nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props noIndex=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props noIndex=true 1`] = `
<div
  className="uu5-bricks-alert uu5-noindex uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props onClose() - alert should be open 1`] = `
<Alert
  content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
  header="onClose"
  id="uuAlertID"
  onClose={[Function]}
  onCloseAfter={[Function]}
  onCloseBefore={[Function]}
/>
`;

exports[`UU5.Bricks.Alert props onClose() - alert should be open 2`] = `
<Alert
  content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
  header="onClose"
  id="uuAlertID"
  onClose={[Function]}
  onCloseAfter={[Function]}
  onCloseBefore={[Function]}
/>
`;

exports[`UU5.Bricks.Alert props onCloseAfter() - alert should open with onCloseAfter 1`] = `
<Alert
  content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
  header="onClose"
  id="uuAlertID"
  onClose={[Function]}
  onCloseAfter={[Function]}
  onCloseBefore={[Function]}
/>
`;

exports[`UU5.Bricks.Alert props onCloseAfter() - alert should open with onCloseAfter 2`] = `
<Alert
  content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
  header="onClose"
  id="uuAlertID"
  onClose={[Function]}
  onCloseAfter={[Function]}
  onCloseBefore={[Function]}
/>
`;

exports[`UU5.Bricks.Alert props onCloseBefore() - alert should open with onCloseBefore 1`] = `
<Alert
  content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
  header="onClose"
  id="uuAlertID"
  onClose={[Function]}
  onCloseAfter={[Function]}
  onCloseBefore={[Function]}
/>
`;

exports[`UU5.Bricks.Alert props onCloseBefore() - alert should open with onCloseBefore 2`] = `
<Alert
  content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
  header="onClose"
  id="uuAlertID"
  onClose={[Function]}
  onCloseAfter={[Function]}
  onCloseBefore={[Function]}
/>
`;

exports[`UU5.Bricks.Alert props position="center" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props position="left" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-left uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props position="right" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-right uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props pureRender=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props pureRender=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props selected=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props selected=true 1`] = `
<div
  className="uu5-bricks-alert uu5-common-selected uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "borderRadius": "2px",
      "padding": "8px",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "backgroundColor": "red",
      "color": "blue",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props textCorrector=false 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      checkGrammar={false}
      checkHighlight={false}
      checkSpaces={false}
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props textCorrector=true 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      checkGrammar={true}
      checkHighlight={true}
      checkSpaces={true}
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Alert props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-alert uu5-bricks-alert-center uu5-bricks-alert-with-header"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "MsTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title="My Tooltip"
>
  <div
    className="uu5-bricks-alert-header-wrapper"
    key="header"
  >
    <div
      className="uu5-bricks-alert-header"
    >
       
      Header content
       
    </div>
    <Link
      className="uu5-bricks-alert-close"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Link>
  </div>
  <div
    className="uu5-bricks-alert-content"
    key="content"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum placerat tristique."
    />
  </div>
</div>
`;
